# async_architecture_6

./: .gitignore  Makefile  README.md  docker-compose.yml
auth/: Dockerfile  main.py  pyproject.toml
auth/api/: api_router.py
auth/api/v1/: auth_router.py
auth/auth_backend/: auth_jwt_bearer_backend.py  user_manager.py
auth/core/: config.py  logs.py
auth/db/: base.py  model.py
auth/migrations/: env.py
auth/migrations/versions/: 2024_03_02_2316-c70dcf4fb451_init.py
auth/schemas/: auth_schemas.py
bookkeeping_board/: main.py  pyproject.toml  router.py
bookkeeping_board/core/: config.py
bookkeeping_board/db/: base.py  model.py
bookkeeping_board/migrations/: env.py
bookkeeping_board/migrations/versions/: 2024_03_11_1304-dc0931d7c0ac_init.py  2024_03_11_1613-4789d270fe46_init.py  2024_03_13_2230-6d9937d08188_unprocessed_events.py
bookkeeping_board/schemas/: bookkeeping_schemas.py
task_board/: Dockerfile  main.py  pyproject.toml
task_board/api/: api_router.py
task_board/api/v1/: task_board_router.py
task_board/core/: config.py
task_board/db/: base.py  model.py
task_board/kafka/: consumer.py  producer.py
task_board/migrations/: env.py
task_board/migrations/versions/: 2024_03_03_2042-7a420cb425ed_init.py  2024_03_10_0150-145b43a11624_add_is_billing.py
task_board/scheduled_tasks/: task_board_scheduler.py
task_board/schemas/: task_schemas.py
